--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@
 
 
 .home-background {
+    background-image: url('/picture/bm.jpeg');
     background-size: cover;
     z-index:-1 ;
     width: 100%;
